--- a/views/login.jade
+++ b/views/login.jade
@@ -4,3 +4,12 @@ html
 		title Wolf Chords - Fetch
 	body
 		h1 You need to log in!
+		form(action="/fetch", method="post")
+			div
+				label Username
+				input(type="text", name="username")
+			div
+				label Password
+				input(type="password", name="password")
+			div
+				input(type="submit", value="Log In")
