Refactoring routes to be more useful, including basic styles and sass

--- a/views/fetchhub.jade
+++ b/views/fetchhub.jade
@@ -2,5 +2,9 @@ doctype html
 html
 	head
 		title Fetch - Hub
+		link(rel='stylesheet', type='text/css', href='/css/normalize.css')
+		link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Raleway')
+
+		link(rel='stylesheet', type='text/css', href='/css/fetch.css')
 	body
 		h1 Soon there will be cool admin stuff here!
