Creating a layout.jade template to extend other views off of

--- a/views/notfound.jade
+++ b/views/notfound.jade
@@ -1,6 +1,3 @@
-doctype html
-html
-	head
-		title Wolf Chords - Not Found
-	body
-		h1 Whoops! Looks like you took a wrong turn.
+extend layout
+block content
+	h1 Whoops! Looks like you took a wrong turn.
