--- a/views/fetchhub.jade
+++ b/views/fetchhub.jade
@@ -1,10 +1,7 @@
-doctype html
-html
-	head
-		title Fetch - Hub
-		link(rel='stylesheet', type='text/css', href='/css/normalize.css')
-		link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Raleway')
-
-		link(rel='stylesheet', type='text/css', href='/css/fetch.css')
-	body
-		h1 Soon there will be cool admin stuff here!
+extend layout
+block content
+	h1 Fetch Hub
+	select(name="entry-type")
+		option(value='all') All
+		option(value='reviews') Reviews
+		option(value='articles') Articles
