--- a/views/fetchlogin.jade
+++ b/views/fetchlogin.jade
@@ -1,15 +1,12 @@
-doctype html
-html
-	head
-		title Wolf Chords - Fetch
-	body
-		h1 You need to log in!
-		form(action="/fetch", method="post")
-			div
-				label Username
-				input(type="text", name="username")
-			div
-				label Password
-				input(type="password", name="password")
-			div
-				input(type="submit", value="Log In")
+extend layout
+block content
+	h1 You need to log in!
+	form(action="/fetch", method="post")
+		div
+			label Username
+			input(type="text", name="username")
+		div
+			label Password
+			input(type="password", name="password")
+		div
+			input(type="submit", value="Log In")
