--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,14 @@
 h1 {
   font-family: "Raleway", sans-serif; }
 
+.entry-list {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #000000; }
+
+.entry {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #AAAAAA; }
+
 /*# sourceMappingURL=style.css.map */
