--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,15 @@ $header-font: 'Raleway', sans-serif;
 h1 {
 	font-family: $header-font;
 }
+
+.entry-list {
+	width: 100%;
+	height: 100%;
+	border: 1px solid #000000;
+}
+
+.entry {
+	width: 100%;
+	height: 100%;
+	border: 1px solid #AAAAAA;
+}
