--- a/views/fetchlogin.jade
+++ b/views/fetchlogin.jade
@@ -1,7 +1,7 @@
 extend layout
 block content
 	h1 You need to log in!
-	form(action="/fetch", method="post")
+	form(action="/", method="post")
 		div
 			label Username
 			input(type="text", name="username")
