--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,27 @@
 h1 {
   font-family: "Raleway", sans-serif; }
 
-.entry-list {
-  width: 100%;
-  height: 100%;
-  border: 1px solid #000000; }
+#frame {
+  margin-left: 2.5%;
+  width: 95%; }
+  #frame a {
+    padding: 0.25em;
+    margin-left: 1%;
+    border-radius: 0.25em;
+    background-color: #BBBBBB; }
 
 .entry {
   width: 100%;
-  height: 100%;
-  border: 1px solid #AAAAAA; }
+  height: 100%; }
+  .entry:nth-of-type(odd) {
+    background-color: #EFEFEF; }
+  .entry p {
+    padding: 0.5em;
+    margin: 0; }
+
+#entry-list {
+  margin-top: 1%;
+  width: 100%;
+  border: 1px solid #000000; }
 
 /*# sourceMappingURL=style.css.map */
